# attention-is-all-you-need-pytorch

./: .gitignore  README.md  pyproject.toml  timing_metrics_cpu.json  train.sh
report/: appendix.tex  introduction.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  methodology.tex  myData.tex  optimization.tex  pdflatex32050.fls  references.bib  results.tex  title_page.tex  training.tex
transformer_project/data/: clean_data.py  translation_dataset.py
transformer_project/modelling/: attention.py  bpe.py  custom_bpe_tokenizer.py  ffn.py  functional.py  huggingface_bpe_tokenizer.py  lr_scheduler.py  positional_encoding.py  transformer.py  word_embedding.py
transformer_project/preprocessing/: clean_data.py  prepare_offline_data.py
transformer_project/run/: bleu.py  compare_tokenizers.py  corpus.txt  inference.py  train_model.py  train_tokenizer.py
transformer_project/test/: practical_6.py  test_attention_layer.py  test_linear_layer.py
