[tool.poetry]
name = "transformer-project"
version = "0.1.0"
description = ""
authors = ["Nils Reck <reck@sipgate.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
datasets = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
